added text in bmi

--- a/bmi/index.html
+++ b/bmi/index.html
@@ -24,11 +24,11 @@
 <div class="container">
     <div class="row">
       <div class="col-md-4 mt-5">
-        <label class="fs-4">WEIGHT: (in kg) :</label>
-            <input type="text" id="weight"class="inputbox" placeholder="Enter the weight in kg"/><br><br>
+        <label class="fs-4 mt-1">WEIGHT: (in kg) :</label>
+            <input type="text" id="weight"class="inputbox mt-1" placeholder="Enter the weight in kg"/><br><br>
 
-            <label class="fs-4">HEIGHT:(in cm) :</label>
-            <input type="text" id="height" class="inputbox" placeholder="Enter the height in cm"/><br><br>
+            <label class="fs-4 mt-1">HEIGHT:(in cm) :</label>
+            <input type="text" id="height" class="inputbox mt-1" placeholder="Enter the height in cm"/><br><br>
             <p id="ans" class="fs-4 fw-bold">BMI:</p>
 
             <p id="condition" class="fs-4 fw-bold">RESULT:</p>
@@ -46,11 +46,12 @@
        <h4 class="text-center fs-3" id="tipsheading">Tips for maintaining good BMI</h4>
        <p id="">
         <ul class="fs-5"  id="tips">
-           <li> Eat good foods. Foods high in sugar and calories lead to weight gain if you are not careful. ...</li>
-        <li>Drink more water. Drinking water, along with eating good foods and exercising daily, can help you to maintain a healthy weight. ...</li>
-          <li>Exercise daily. ...</li>
-         <li>Get more sleep. ...</li>
+           <li> Eat good foods 🥧. Foods high in sugar and calories lead to weight gain if you are not careful. ...</li>
+        <li>Drink more water 💧. Drinking water, along with eating good foods and exercising daily, can help you to maintain a healthy weight. ...</li>
+          <li>Exercise daily. ... 🏋️‍♀️</li>
+         <li>Get more sleep. ...🙇‍♂️</li>
          <li>Make a goal and stick to it.</li>
+         <li>Eat fruit ....🥭🍊🍉</li>
         </ul>
        </p>
        
