--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <nav class="navbar navbar-expand-lg bg-body-secondary text-center mb-4 py-3">
         <div class="container ">
-          <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">Navbar</a>
+          <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">javascript-group-project</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
