--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -11,10 +11,28 @@
 </head>
 
 <body class="main-body">
-   <div class="d-block mx-auto mb-2">
-    <h1  class="text-center" >Magical Bulb</h1>
-   </div>
-   
+    <div class="d-block mx-auto mb-2">
+        <h1 class="text-center">Magical Bulb</h1>
+    </div>
+
+    <div class="card-light d-block mx-auto mt-2">
+        <img src="./images/off.png" id="bulb" height="300px" class="d-block mx-auto" />
+
+        <div class="d-flex justify-content-evenly mt-2">
+            <button onclick="lightOn()" class="fs-3 px-4 ms-5  btn bg-warning me-4">ON</button>
+            <button onclick="lightOff()" class="fs-3 px-4 ms-5 bg-dark btn btn-dark me-5">OFF</button>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
