--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -25,7 +25,13 @@
 
     </div>
 
-
+    <h3 class="text-center mt-3">Different Colors</h3><br/>
+<div class="d-flex justify-content-evenly">
+    <button onclick="lightGreen()" class="fs-3 px-4 ms-5  btn btn-success">Green</button>
+    <button onclick="lightRed()" class="fs-3 px-4 ms-5  btn btn-danger">Red</button>
+    <button onclick="lightPink()" class="fs-3 px-4 ms-5  btn bg-pink">Pink</button>
+    <button onclick="lightSkyBlue()" class="fs-3 px-4 ms-5  btn btn-info">SkyBlue</button>
+</div>
 
 
 
