js function added

--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -33,6 +33,30 @@
     <button onclick="lightSkyBlue()" class="fs-3 px-4 ms-5  btn btn-info">SkyBlue</button>
 </div>
 
+<script>
+    const changeLightcolr = document.getElementById("bulb");
+
+    function lightOn() {
+        changeLightcolr.src = "./images/on.png";
+    }
+    function lightOff() {
+        changeLightcolr.src = "./images/off.png";
+    }
+    function lightGreen() {
+        changeLightcolr.src = "./images/green-light.png";
+    }
+    function lightRed() {
+        changeLightcolr.src = "./images/red-light.png";
+    }
+    function lightPink() {
+        changeLightcolr.src = "./images/pink-light.png";
+    }
+    function lightSkyBlue() {
+        changeLightcolr.src = "./images/sky-blue-light.png";
+    }
+
+
+</script>
 
 
 
