--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -80,7 +80,7 @@
     <div class="row">
 
       <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-5">
-        <h5 class=" fs-4">Quick Links </h5>
+        <h5 class=" fs-4">JavaScript Projects</h5>
         <a href="./../index.html" style="text-decoration: none; display:block; color: white;">Home</a>
         <a href="./../dice-roller/index.html" style="text-decoration: none; display:block; color: white;">Dice 
       roller</a>
