--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -12,7 +12,7 @@
 <body class="bg-color">
     <nav class="navbar navbar-expand-lg bg-body-secondary text-center mb-4 py-3">
         <div class="container ">
-          <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">JavaScript </a>
+          <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">content </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,9 +52,9 @@
           <h5 class="card-title mt-5 d-flex justify-content-center fs-2">Car Model</h5>
           <div class="d-flex justify-content-center">
           
-          <a href="#" class="btn btn-danger fs-5 m-3 " onClick="frontview()">Front view</a>
-          <a href="#" class="btn btn-danger fs-5 m-3" onClick=" sidetview()">Side view</a>
-          <a href="#" class="btn btn-danger fs-5 m-3" onClick="backview()">Back View</a>
+          <a href="#" class="button-color  m-3 mt-4 " onClick="frontview()">Front view</a>
+          <a href="#" class="button-color  m-3 mt-4" onClick=" sidetview()">Side view</a>
+          <a href="#" class="button-color  m-3 mt-4" onClick="backview()">Back View</a>
         </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
 
       </script>
 
-<footer class="bg-dark mt-5">
+<footer class="button-color mt-5">
   <div class="container text-light">
     <div class="row">
 
