--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
     
             <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-3">
-              <h5 class=" fs-4">Contact Us</h5><br/>
+              <h5 class=" fs-4">Contact Us</h5>
               <pre><a href="tel:+919373814613" style="text-decoration: none; display:block; color: white; "><i class="fa-solid fa-phone-volume fs-2"></i> +918262945593</a></pre>
               <a href="mailto:prajaktamhase8@gmail.com" style="text-decoration: none; display:block; color: white;"><i
                   class="fa-solid fa-envelope "></i>
