--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
 
        <div class="container">
-      <div class=" text content">
+      <div class=" text content ">
 
       </div>
      <div>
@@ -56,7 +56,7 @@
    
     </div>
     </div>
-    <div class="d-flex justify-content-evenly">
+    <div class="d-flex justify-content-evenly ">
         <div class=" mt-5 car col-md-3 ">
             <div class=" m-2 p-2 card1" style="width: 400px;">
 
@@ -75,7 +75,7 @@
         </div>
 
 
-        <div class="d-flex justify-content-center mt-5 car col-md-3 ">
+        <div class="d-flex justify-content-center mt-5 car col-md-3">
             <div class=" m-2 p-2 card1" style="width: 400px;">
 
                 <img src="./product-galary/bulb.jpg" id="car" height=350px; class="card-img-top " alt="...">
@@ -149,11 +149,12 @@
 
  <!-- footer -->
     <footer class="button-color mt-5">
-        <div class="container text-light">
+        <div class="container text-light col-md-6">
+          <h1 class="text-center">Welcome To Our JavaScript Projects...!</h1><br/>
           <div class="row">
     
-            <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-5">
-              <h5 class=" fs-4">JavaScript Projects </h5>
+            <div class="  col-md-8 ">
+              <!-- <h5 class=" fs-4">JavaScript Projects </h5> -->
               <a href="./index.html" style="text-decoration: none; display:block; color: white;">Home</a>
               <a href="./dice-roller/index.html" style="text-decoration: none; display:block; color: white;">Dice 
             roller</a>
@@ -163,7 +164,7 @@
               <a href="./score-keeper/index.html" style="text-decoration: none; display:block; color: white;">Score keeper</a>
             </div>
     
-            <div class="col-lg-6 col-md-6 col-sm-12 my-md-3 my-sm-3">
+            <div class=" col-md-4">
               <h5 class=" fs-4">Contact Us</h5>
               <pre><a href="tel:+919373814613" style="text-decoration: none; display:block; color: white; "><i class="fa-solid fa-phone-volume fs-2"></i> +918262945593</a></pre>
               <a href="mailto:prajaktamhase8@gmail.com" style="text-decoration: none; display:block; color: white;"><i
