footer added in bmi calculator

--- a/bmi/index.html
+++ b/bmi/index.html
@@ -92,6 +92,37 @@
       </div>
     </div>
   </div>
+
+  <footer class="button-color mt-5" style="background-color: blueviolet;">
+    <div class="container text-light col-md-6">
+      <h1 class="text-center">Welcome To Our JavaScript Projects...!</h1><br/>
+      <div class="row">
+
+        <div class="  col-md-8 ">
+          <!-- <h5 class=" fs-4">JavaScript Projects </h5> -->
+          <a href="./index.html" style="text-decoration: none; display:block; color: white;">Home</a>
+          <a href="./dice-roller/index.html" style="text-decoration: none; display:block; color: white;">Dice 
+        roller</a>
+          <a href="./bulb-on-off/index.html" style="text-decoration: none; display:block; color: white;">Bulb Toggler</a>
+          <a href="./bmi/index.html" style="text-decoration: none; display:block; color: white;">BMI Calculator</a>
+          <a href="./product-galary/index.html" style="text-decoration: none; display:block; color: white;">Product Galary</a>
+          <a href="./score-keeper/index.html" style="text-decoration: none; display:block; color: white;">Score keeper</a>
+        </div>
+
+        <div class=" col-md-4">
+          <h5 class=" fs-4">Contact Us</h5>
+          <pre><a href="tel:+919373814613" style="text-decoration: none; display:block; color: white; "><i class="fa-solid fa-phone-volume fs-2"></i> +918262945593</a></pre>
+          <a href="mailto:prajaktamhase8@gmail.com" style="text-decoration: none; display:block; color: white;"><i
+              class="fa-solid fa-envelope "></i>
+            prajaktamhase8@gmail.com</a>
+          <br>
+          <!-- <input type="tel"> -->
+          <!-- <span>Click to know our team</span><br>
+          <a href="./pages/aboutus.html" style="text-decoration: none; display:block; color: white;">About Us</a>
+        </div> -->
+      </div>
+      <div>
+  </footer>
    
 <script>
 
