--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript project</title>
     <link rel="stylesheet" href="./product-galary/product.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -135,7 +135,7 @@
                 <img src="./product-galary/bmi.jpg" id="car" height="300px" class="card-img-top " alt="...">
                 <div class="card-body">
                     <h5 class="card-title mt-5 d-flex justify-content-center fs-2">BMI Calculate</h5>
-                    <h5 class="d-flex justify-content-center">Gayatri </h5>
+                    <h5 class="d-flex justify-content-center">Gayatri  Sathawane</h5>
 
                     <div class="d-flex justify-content-center">
 
