--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body class="bg-color">
+<body >
     
     <nav class="navbar navbar-expand-lg bg-body-secondary text-center mb-4 py-3">
         <div class="container ">
           <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">content</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          <button class="navbar-  toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,16 +47,14 @@
         </div>
       </nav>
 
-       <div class="container">
-      <div class=" text content ">
+       <!-- <div class="container"> -->
+      <div >
+        <h1 class="script">Welcome To Our Mini <br/>JavaScript Projects....!</h1>
 
       </div>
-     <div>
-        <h1 class="script">JavaScript Projects</h1>
-   
+    
     </div>
-    </div>
-    <div class="d-flex justify-content-evenly ">
+    <div class="d-flex justify-content-evenly cards">
         <div class=" mt-5 car col-md-3 ">
             <div class=" m-2 p-2 card1" style="width: 400px;">
 
