--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
           </div>
         </div>
       </nav>
-
-       <!-- <div class="container"> -->
       <div >
         <h1 class="script">Welcome To Our Mini <br/>JavaScript Projects....!</h1>
 
@@ -116,7 +114,7 @@
  
     <div class="d-flex justify-content-evenly">
 
-        <div class="mt-5 car">
+        <div class="mt-5 car col-md-5 ms-5">
             <div class=" m-2 p-2 card1 shadow" style="width: 400px;">
 
                 <img src="./img/s.jpg"  height="270px" class="card-img-top pimg" alt="...">
@@ -134,7 +132,7 @@
             </div>
         </div>
 
-        <div class="mt-5 car ">
+        <div class="mt-5 car col-md-5 ">
             <div class=" m-2 p-2 card1 shadow" style="width: 400px;">
 
                 <img src="./img/b.jpg"  height="270px" class="card-img-top pimg " alt="...">
@@ -160,7 +158,6 @@
           <div class="row">
     
             <div class="  col-md-8 ">
-              <!-- <h5 class=" fs-4">JavaScript Projects </h5> -->
               <a href="./index.html" style="text-decoration: none; display:block; color: white;">Home</a>
               <a href="./dice-roller/index.html" style="text-decoration: none; display:block; color: white;">Dice 
             roller</a>
@@ -177,10 +174,6 @@
                   class="fa-solid fa-envelope "></i>
                 prajaktamhase8@gmail.com</a>
               <br>
-              <!-- <input type="tel"> -->
-              <!-- <span>Click to know our team</span><br>
-              <a href="./pages/aboutus.html" style="text-decoration: none; display:block; color: white;">About Us</a>
-            </div> -->
           </div>
           <div>
       </footer>
