--- a/diceroller/index.html
+++ b/diceroller/index.html
@@ -51,29 +51,28 @@
     </nav>
     <!-- nav bar end -->
 
-    <div class="card-text">
+    <div class="card-text ">
         <h1> Dice Roller</h1>
     </div>
 
-    <div class="contener">
-        <div class="roll-card-1 roll-center border-color">
-            <img src="./img/dice-casino.png" id="diceimgchenges" style="height: 220px;" class="img-margin">
-        </div>
-        <div class="roll-card-2 roll-center border-color">
-            <img src="./img/dice-casino.png" id="diceimgchenges2" style="height: 220px;" class="img-margin">
-        </div>
-    </div>
 
-    <div class="contener">
-        <div>
+    <div class="row ">
+
+        <div class="col-6 col-sm-12 roll-center border-color card-box">
+            <img src="./img/dice-casino.png" id="diceimgchenges" style="height: 220px;" class="img-margin">
             <button type="button" onclick="diceroller() " class="btn-onclick button-bg">
                 Roller</button>
         </div>
-        <div>
+        <!-- <div class="col-"></div> -->
+        <div class="col-6 col-sm-12 roll-center border-color card-box">
+            <img src="./img/dice-casino.png" id="diceimgchenges2" style="height: 220px;" class="img-margin">
             <button type="button" onclick="diceroller2()" class="btn-onclick button-bg "
                 onmouseover="circle">Roller</button>
         </div>
     </div>
+    </div>
+
+
 
     <div class="btn-rollboth">
         <button type="button " onclick="Rollboth()" class="button-bg">
@@ -201,7 +200,7 @@
                 </div>
                 <div>
     </footer>
-<!-- footer end -->
+    <!-- footer end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
