--- a/diceroller/index.html
+++ b/diceroller/index.html
@@ -25,7 +25,7 @@
 
                     </li>
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./dice-roller/index.html"
+                        <a class="nav-link active fw-bold" aria-current="page" href="./index.html" .
                             style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
 
                     </li>
