--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -63,11 +63,11 @@
         <img src="./images/off.png" id="bulb" height="300px" class="d-block mx-auto" />
 
         <div class="d-flex justify-content-evenly mt-2">
-          <button onclick="lightOn()" class="fs-3 px-4 ms-5  btn bg-warning me-4">ON</button>
-          <button onclick="lightOff()" class="fs-3 px-4 ms-5 bg-dark btn btn-dark me-5">OFF</button>
+          <button onclick="lightOn()" class="fs-5 px-4 ms-5  btn bg-warning me-4">ON</button>
+          <button onclick="lightOff()" class="fs-5 px-4 ms-5 bg-dark btn btn-dark me-5">OFF</button>
         </div>
 
-        <div class="d-flex mt-3 justify-content-center" >
+        <div class="d-flex mt-3 justify-content-evenly" >
           <div class="ms-2">
             <img src="./images/green.png" onclick="lightGreen()" />
             <h5 class="text-success text-center">Green</h5>
