--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -13,7 +13,7 @@
 
 <body class="main-body">
 
-  <nav class="navbar navbar-expand-lg text-center mb-4 py-3" style="background-color:#e6d1fa">
+  <nav class="navbar navbar-expand-lg text-center mb-4 py-3 bg-body-secondary">
     <div class="container ">
       <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
