--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -41,7 +41,7 @@
     
               </li>
               <li class="nav-item me-xxl-5">
-                <a class="nav-link active fw-bold" aria-current="page" href="./../dice-roller/index.html" style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
+                <a class="nav-link active fw-bold" aria-current="page" href="./../diceroller/index.html" style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
     
               </li>
               <li class="nav-item me-xxl-5">
