--- a/diceroller/index.html
+++ b/diceroller/index.html
@@ -20,27 +20,27 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./score-keeper/index.html"
+                        <a class="nav-link active fw-bold" aria-current="page" href="./../score-keeper/index.html"
                             style="margin: 0 50px; color: blueviolet; ">Score Keeper</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./index.html" .
+                        <a class="nav-link active fw-bold" aria-current="page" href="./../diceroller/index.html" .
                             style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./bmi/index.html"
+                        <a class="nav-link active fw-bold" aria-current="page" href="./../bmi/index.html"
                             style="margin-right: 50px; color: blueviolet; ">BMI Calculator</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./bulb-on-off/index.html"
+                        <a class="nav-link active fw-bold" aria-current="page" href="./../bulb-on-off/index.html"
                             style="margin-right: 50px; color: blueviolet;">Bulb Toggler</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
-                        <a class="nav-link active fw-bold" aria-current="page" href="./product-galary/index.html"
+                        <a class="nav-link active fw-bold" aria-current="page" href="./../product-galary/index.html"
                             style="margin-right: 50px; color: blueviolet; ">Product Cards</a>
 
                     </li>
