--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg text-center mb-4 py-3 bg-body-secondary">
     <div class="container ">
-      <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">Navbar</a>
+      <a class="navbar-brand mx-sm-5 fw-bold" href="./../index.html" style="margin-right: 50px; color: blueviolet;">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
 
           </li>
           <li class="nav-item me-xxl-5">
-            <a class="nav-link active fw-bold" aria-current="page" href="./../dice-roller/index.html"
+            <a class="nav-link active fw-bold" aria-current="page" href="./../diceroller/index.html"
               style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
 
           </li>
