--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg button-color text-center mb-4 py-3">
+  <nav class="navbar navbar-expand-lg button-color text-center mb-4 py-3 button-color">
     <div class="container ">
       <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: white;">content</a>
 
