--- a/diceroller/index.html
+++ b/diceroller/index.html
@@ -26,9 +26,9 @@
 
 <body>
     <!-- nav bar start -->
-    <nav class="navbar navbar-expand-lg bg-body-secondary text-center mb-4 py-3 bg-color: blueviolet;">
+    <nav class="navbar navbar-expand-lg button-color text-center mb-4 py-3 bg-color: blueviolet;">
         <div class="container ">
-            <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: blueviolet;">Mini Utility Project</a>
+            <a class="navbar-brand mx-sm-5 fw-bold" href="#" style="margin-right: 50px; color: white;">Mini Utility Project</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,27 +37,27 @@
                 <ul class="navbar-nav">
                     <li class="nav-item me-xxl-5">
                         <a class="nav-link active fw-bold" aria-current="page" href="./../score-keeper/index.html"
-                            style="margin: 0 5px; color: blueviolet; ">Score Keeper</a>
+                            style="margin: 0 5px; color: white; ">Score Keeper</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
                         <a class="nav-link active fw-bold" aria-current="page" href="./../diceroller/index.html" .
-                            style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
+                            style="margin-right: 50px; color: white; ">Dice Roller</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
                         <a class="nav-link active fw-bold" aria-current="page" href="./../bmi/index.html"
-                            style="margin-right: 50px; color: blueviolet; ">BMI Calculator</a>
+                            style="margin-right: 50px; color: white ">BMI Calculator</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
                         <a class="nav-link active fw-bold" aria-current="page" href="./../bulb-on-off/index.html"
-                            style="margin-right: 50px; color: blueviolet;">Bulb Toggler</a>
+                            style="margin-right: 50px; color: white">Bulb Toggler</a>
 
                     </li>
                     <li class="nav-item me-xxl-5">
                         <a class="nav-link active fw-bold" aria-current="page" href="./../product-galary/index.html"
-                            style="margin-right: 50px; color: blueviolet; ">Product Cards</a>
+                            style="margin-right: 50px; color: white ">Product Cards</a>
 
                     </li>
 
