--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
               <h5 class="text-center">Design by:Harshali Kanoje</h5>
               <div class="d-flex justify-content-center">
                 <a href="./score-keeper/index.html" class=" button-color fs-5 m-3 px-3 rounded ">See live</a>
-                <a href="https://github.com/prajktamhase/javascript-group-project"
-                  class="button-color fs-5 m-3 px-3 rounded">Github</a>
+                <a href=https://github.com/Harshali-Kanoje class="button-color fs-5 m-3 px-3 rounded">Github</a>
               </div>
             </div>
           </div>
@@ -178,11 +177,11 @@
       <h1 class="text-center pt-4 text-light">Thank You For Visiting JavaScript Projects...!</h1><br/>
       <div class="text-light footer1 ">
         
-        <a href="./../score-keeper/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Score Keeper</li></a>
-      <a href="./../diceroller/index.html" target="_blank" class="text-decoration-none" >  <li class="link ms-4 fs-4 text-light ">Dice Roller</li></a>
-      <a href="./index.html" target="_blank " class="text-decoration-none">  <li class="link ms-4 fs-4 text-light">BMI</li></a>
-        <a href="./../bulb-on-off/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Bulb On-Off</li></a>
-      <a href="./../product-galary/index.html" class="text-decoration-none" >   <li class="link ms-4 fs-4 text-light text-decoration-none">Product Gallary</li></a><br>
+        <a href="./score-keeper/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Score Keeper</li></a>
+      <a href="./diceroller/index.html" target="_blank" class="text-decoration-none" >  <li class="link ms-4 fs-4 text-light ">Dice Roller</li></a>
+      <a href="./bmi/index.html" target="_blank " class="text-decoration-none">  <li class="link ms-4 fs-4 text-light">BMI</li></a>
+        <a href="./bulb-on-off/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Bulb On-Off</li></a>
+      <a href="./product-galary/index.html" class="text-decoration-none" >   <li class="link ms-4 fs-4 text-light text-decoration-none">Product Gallary</li></a><br>
           <br><br><br>
      
       </div>
