--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -102,9 +102,9 @@
         
         <a href="./../score-keeper/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Score Keeper</li></a>
       <a href="./../diceroller/index.html" target="_blank" class="text-decoration-none" >  <li class="link ms-4 fs-4 text-light ">Dice Roller</li></a>
-      <a href="./index.html" target="_blank " class="text-decoration-none">  <li class="link ms-4 fs-4 text-light">BMI</li></a>
+      <a href="./../bmi/index.html" target="_blank " class="text-decoration-none">  <li class="link ms-4 fs-4 text-light">BMI</li></a>
         <a href="./../bulb-on-off/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Bulb On-Off</li></a>
-      <a href="./../product-galary/index.html" class="text-decoration-none" >   <li class="link ms-4 fs-4 text-light text-decoration-none">Product Gallary</li></a><br>
+      <a href="./index.html" class="text-decoration-none" >   <li class="link ms-4 fs-4 text-light text-decoration-none">Product Gallary</li></a><br>
           <br><br><br>
      
       </div>
