--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -104,7 +104,7 @@
       <div class="col-lg-3 col-md-6 col-sm-12 my-md-3 my-sm-5 links">
         <h5 class="mt-2 mt-sm-0 fs-4">Quick Links </h5>
         <a href="./../index.html" style="text-decoration: none; display:block; color: white;">Home</a>
-        <a href="./index.html" style="text-decoration: none; display:block; color: white;">Score Keeper</a>
+        <a href="./../score-keeper/index.html" style="text-decoration: none; display:block; color: white;">Score Keeper</a>
         <a href="./../diceroller/index.html" style="text-decoration: none; display:block; color: white;">Dice Roller</a>
         <a href="./../bulb-on-off/index.html" style="text-decoration: none; display:block; color: white;">Bulb Toggler</a>
         <a href="./../bmi/index.html" style="text-decoration: none; display:block; color: white;">BMI Calculator</a>
