--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -13,9 +13,9 @@
 
 <body class="main-body">
 
-  <nav class="navbar navbar-expand-lg text-center mb-4 py-3 bg-body-secondary">
+  <nav class="navbar navbar-expand-lg text-center mb-4 py-3 bg-violet">
     <div class="container ">
-      <a class="navbar-brand mx-sm-5 fw-bold" href="./../index.html" style="margin-right: 50px; color: blueviolet;">Mini Utility Project</a>
+      <a class="navbar-brand mx-sm-5 fw-bold" href="./../index.html" style="margin-right: 50px; color:white">Mini Utility Project</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,27 +24,27 @@
         <ul class="navbar-nav">
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../score-keeper/index.html"
-              style="margin: 0 25px; color: blueviolet; ">Score Keeper</a>
+              style="margin: 0 25px;  color:white ">Score Keeper</a>
 
           </li>
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../diceroller/index.html"
-              style="margin-right: 50px; color: blueviolet; ">Dice Roller</a>
+              style="margin-right: 50px;  color:white ">Dice Roller</a>
 
           </li>
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../bulb-on-off/index.html"
-              style="margin-right: 50px; color: blueviolet; ">Bulb Toggler</a>
+              style="margin-right: 50px;  color:white">Bulb Toggler</a>
 
           </li>
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../bmi/index.html"
-              style="margin-right: 50px; color: blueviolet;">BMI Calculator</a>
+              style="margin-right: 50px;  color:white">BMI Calculator</a>
 
           </li>
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../product-galary/index.html"
-              style="margin-right: 50px; color: blueviolet; ">Product Cards</a>
+              style="margin-right: 50px;  color:white">Product Cards</a>
 
           </li>
 
