--- a/product-galary/index.html
+++ b/product-galary/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
   </div>
-
+</footer>
    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
